plugins {
    id 'com.android.application' version '7.4.2' apply false
    id 'com.android.library' version '7.4.2' apply false
    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
}

tasks.register("generateRunDirectory") {
    doLast {
        mkdir "run"
    }
}
generateRunDirectory

allprojects {
    group = 'de.dasbabypixel.gamelauncher'
    version = '0.0.2-SNAPSHOT'
    pluginManager.withPlugin('java') {
        javadoc.options.addStringOption('Xdoclint:none', '-quiet')
        javadoc.options.encoding = 'UTF-8'
        java.toolchain.languageVersion = JavaLanguageVersion.of(11)
        pluginManager.withPlugin('maven-publish') {
            java {
                withSourcesJar()
                withJavadocJar()
            }
        }
    }

    pluginManager.withPlugin('maven-publish') {
        publishing {
            repositories {
                maven {
                    name = 'DarkCube'
                    credentials PasswordCredentials
                    url = 'https://nexus.darkcube.eu/repository/dasbabypixel/'
                }
            }
        }
    }


    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
    }
}
